* CHANGED: Deprecate `mwWikiPath` and `mwIndexPhpPath` CLI parameter, use values from the API instead (@Markus-Rost #2422)
* CHANGED: Build `mwRestApiPath` and `mwModulePath` CLI parameter default values from the API (@Markus-Rost #2422)
* NEW: Add `langVariant` CLI parameter for language conversion (@Markus-Rost #2399)
* FIX: Merge initial API calls fetching site info (@Markus-Rost #2385)

1.16.0:
* CHANGED: ActionParse renderer is now the preferred one when available (@benoit74 #2183)
* CHANGED: Retrieve CSS from CSS-only gadgets automatically (@benoit74 #2212)
* CHANGED: Make ActionParse renderer respect custom display titles (@Markus-Rost #2330)
* CHANGED: Retry 500, 502, 503 and 504 HTTP errors as well (@benoit74 #2389, #2400)
* CHANGED: Use wiki default parser instead of forcing Parsoid with ActionParse (@Markus-Rost #2391)
* CHANGED: Fetch article <html> and <body> CSS class from headhtml response of the action=parse request (@benoit74 #2356)
* FIX: Always use proper UserAgent and other shared http request settings (@benoit74 #2359)
* FIX: Enhance login logs (@benoit74 #2362)
* FIX: Properly store/reuse Cookies across HTTP calls (@benoit74 #2361)
* FIX: Retry more transient errors (@benoit #2366)
* FIX: Fix/simplify retrieval of siteinfo metadata (@benoit74 #2328)
* FIX: Ensure illustration metadata is really 48x48 even if source image is not square (@benoit74 #2368)
* FIX: Also rewrite inline <style> tags found in article HTML (@benoit74 #1807)
* FIX: Better RTL support (@Markus-Rost #1865 #2367)
* FIX: query.pages can be undefined when getting articles details by IDs (@benoit74 #2376)
* FIX: Do not rethrow original error when too many articles failed to download (@benoit74 #2388)
* FIX: Handle more bad errors while downloading an article and replace with placeholder (@benoit74 #2340 #2394)
* FIX: Use correct license and creator name in the footer (@Markus-Rost #2344 #2345)